# video-contact-pipeline

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  environment.yml  feb8_inference_pipeline.md  pyproject.toml  requirements-notebooks.txt  run_pipeline.py
archive/: caller.ipynb  caller2.ipynb  demo.py  my_demo.py  my_demo_fn.py  nr_preprocess.ipynb  visualize_vid.ipynb
binary_refinement/: README.md  __init__.py  _hsmm_kernels.py  base.py  config.py  evaluator.py  example_usage.py  hsmm_k_segments.py  identity.py  transition_dp.py  types.py
docs/: NOTEBOOKS.md  object_tracking_plan.md
notebooks/: metrics.ipynb  paper_visuals.ipynb  pipeline_starter.ipynb  postprocess_only.ipynb  weakly_supervised_labels.ipynb
object_tracking/: __init__.py  bridge.py  geometry.py  motion.py  state.py
pipeline/: __init__.py  config.py  filters.py  inference.py  main.py  metrics.py  postprocessing.py  preprocessing.py  temporal_roi.py  visualization.py
scripts/: analyze_timestamp_errors.py  audit_pred_gt_coverage.py  bootstrap_notebook.sh  clean_test_outputs.sh  evaluate_metrics.py  generate_stimulus_dataset.py  make_contact_timeline_video.py  render_strict_timeline_videos.py  render_timeline_videos_from_manifest.py  run_hsmm_refinement.py  run_new_pipeline.sh  run_old_pipeline.py  run_parity_suite.sh  run_shrunk_full_workflow.py  run_shrunk_inference_batch.py  run_timestamp_supervision_baseline.py  sweep_timestamp_extractor_params.py
stimulus_detector/: __init__.py
tests/: README.md  compare_csvs.py  test_analyze_timestamp_errors.py  test_barcode_pred_binary.py  (+43 more)
(+27 files in other folders)
